--- a/index.html
+++ b/index.html
@@ -54,11 +54,10 @@
           </div>
         </div>
         <div class="flex items-center gap-3">
-          <button id="lang-toggle" onclick="toggleLang()"
-                  class="px-3 py-2 bg-gray-100 rounded-lg text-sm font-medium hover:bg-gray-200 transition"
-                  title="Switch Language">
-            EN
-          </button>
+          <div class="flex items-center gap-1 text-sm" title="Switch Language">
+            <button onclick="setLang('zh')" id="lang-zh" class="px-2 py-1 rounded transition font-medium text-gray-400 hover:text-gray-900">中文</button>
+            <button onclick="setLang('en')" id="lang-en" class="px-2 py-1 rounded transition font-medium text-gray-400 hover:text-gray-900">EN</button>
+          </div>
           <a href="https://github.com/JackyST0/awesome-rsshub-routes" target="_blank" 
              class="flex items-center gap-2 px-4 py-2 bg-gray-900 text-white rounded-lg hover:bg-gray-700 transition">
             <i class="fab fa-github"></i>
@@ -188,15 +187,46 @@
       }
     };
 
+    // 分类名翻译
+    const categoryNameMap = {
+      'AI 专题': 'AI',
+      '技术社区': 'Tech Communities',
+      '新闻资讯': 'News',
+      '科技媒体': 'Tech Media',
+      '安全资讯': 'Security',
+      '前端 & 设计': 'Frontend & Design',
+      '前端 &amp; 设计': 'Frontend & Design',
+      '编程语言官方博客': 'Language Blogs',
+      '大厂技术博客': 'Tech Blogs',
+      '技术周刊': 'Tech Newsletters',
+      '学术论文': 'Academic Papers',
+      'RSS 工具更新': 'RSS Tools'
+    };
+
+    // 获取分类显示名
+    function getCategoryDisplayName(rawName) {
+      const stripped = rawName.replace(/^[^\s]+\s/, ''); // 去掉 emoji
+      if (currentLang === 'en' && categoryNameMap[stripped]) {
+        return categoryNameMap[stripped];
+      }
+      return stripped;
+    }
+
     // 当前语言
     let currentLang = localStorage.getItem('lang') || 'zh';
 
-    // 切换语言
-    function toggleLang() {
-      currentLang = currentLang === 'zh' ? 'en' : 'zh';
+    // 设置语言
+    function setLang(lang) {
+      currentLang = lang;
       localStorage.setItem('lang', currentLang);
       applyLang();
-      renderFeeds(); // 重新渲染卡片上的按钮文字
+      renderCategoryButtons();
+      renderFeeds();
+    }
+
+    // 切换语言（兼容）
+    function toggleLang() {
+      setLang(currentLang === 'zh' ? 'en' : 'zh');
     }
 
     // 应用语言
@@ -207,8 +237,13 @@
       document.title = t.title;
       document.documentElement.lang = currentLang === 'zh' ? 'zh-CN' : 'en';
 
-      // 更新切换按钮
-      document.getElementById('lang-toggle').textContent = currentLang === 'zh' ? 'EN' : '中';
+      // 更新语言按钮高亮
+      document.getElementById('lang-zh').className = currentLang === 'zh'
+        ? 'px-2 py-1 rounded transition font-medium text-gray-900'
+        : 'px-2 py-1 rounded transition font-medium text-gray-400 hover:text-gray-900';
+      document.getElementById('lang-en').className = currentLang === 'en'
+        ? 'px-2 py-1 rounded transition font-medium text-gray-900'
+        : 'px-2 py-1 rounded transition font-medium text-gray-400 hover:text-gray-900';
 
       // 更新所有 data-i18n 元素
       document.querySelectorAll('[data-i18n]').forEach(el => {
@@ -226,6 +261,15 @@
       const lastCheckEl = document.getElementById('last-check');
       const checkTime = lastCheckEl.dataset.checkTime || '-';
       lastCheckEl.textContent = `${t.lastCheck}：${checkTime}`;
+    }
+
+    // 重新渲染分类按钮文字
+    function renderCategoryButtons() {
+      document.querySelectorAll('.category-btn').forEach(btn => {
+        const cat = btn.dataset.category;
+        if (cat === 'all') return; // "全部/All" 由 data-i18n 处理
+        btn.textContent = getCategoryDisplayName(cat);
+      });
     }
 
     // 全局数据
@@ -339,7 +383,7 @@
           <div class="flex items-start justify-between gap-2 mb-2">
             <h3 class="font-medium text-gray-900 flex-1">${escapeHtml(feed.name)}</h3>
             <span class="text-xs px-2 py-1 bg-indigo-50 text-indigo-600 rounded-full whitespace-nowrap">
-              ${escapeHtml(feed.category.replace(/^[^\s]+\s/, ''))}
+              ${escapeHtml(getCategoryDisplayName(feed.category))}
             </span>
           </div>
           <p class="text-xs text-gray-400 truncate mb-3" title="${escapeHtml(feed.url)}">${escapeHtml(feed.url)}</p>
